add: thanks modal

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-  <link rel="stylesheet" href="css/hover.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://api-maps.yandex.ru/2.1/?apikey=daad87b1-30e6-404a-a801-ff76ef0f78eb&lang=ru_RU" type="text/javascript"></script>
@@ -640,16 +639,16 @@
     <div class="thanks">
       <div class="thanks__dialog">
         <button class="thanks__close"></button>
-        <!-- /.modal__close -->
+        <!-- /.thanks__close -->
         <h3 class="thanks__title">
-          Форма отправилась
+          
         </h3>
-        <!-- /.modal__title -->
+        <!-- /.thanks__title -->
 
       </div>
-      <!-- /.modal__dialog -->
+      <!-- /.thanks__dialog -->
     </div>
-    <!-- /.modal -->
+    <!-- /.thanks -->
 
 <div class="scroll-up">
   <button class="button__scroll-up"></button>
@@ -658,6 +657,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="./js/jquery.vide.min.js"></script>
 <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script>new WOW().init();</script>
 <script src="js/jquery.validate.min.js"></script>
